Rozwiązania Lab 1
All tests from UserApiIntergrationTestsWorking